--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,20 @@
-<!DOCTYPE html>
+	<!DOCTYPE html>
 <html>
-<head>
-  <title>Omrails</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+	<head>
+	  <title>One Month Rails Rocks!</title>
+	  <%= stylesheet_link_tag    "application", :media => "all" %>
+	  <%= javascript_include_tag "application" %>
+	  <%= csrf_meta_tags %>
+	  <%= tag :meta, name: "viewport", content: "width=device-width, initial-scale=1.0" %>
+	</head>
+	<body>
 
-<%= yield %>
+	<%= render 'layouts/header' %>
+	<div class="container">
 
-</body>
+		<%= yield %>
+
+		<%= render 'layouts/footer' %>
+
+	</body>
 </html>
