--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,7 @@
+<% if user_signed_in? %>
+	<h1> You're logged in!</h1>
+<% else %>
+
 <div class="hero-unit">
 	<h1>Welcome to One Month Rails</h1>
 	<p>
@@ -11,5 +15,4 @@
 			<%= link_to 'Sign Up Now!', new_user_registration_path, class: "btn btn-large btn-primary" %>
 	</p>
 </div>
-
- 
+<% end %>
